<resources>
    <string name="app_name">Miku Muki</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--INICIO MENU ADMINISTRADOR-->

    <string name="InicioAdmin">Inicio</string>
    <string name="PefilAdmin">Perfil</string>
    <string name="RegistrarAdmin">Registrar</string>
    <string name="ListarAdmin">Lista de Administradores</string>
    <string name="Salir">Cerrar Sesion</string>


    <!-- Menu Cliente -->
    <string name="Opcionestxt">Opciones</string>
    <string name="InicioCliente">Inicio</string>
    <string name="MasOpcionestxt">Mas Opciones</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="Compartir">Compartir</string>
    <string name="Acceder">Acceder</string>

    <!-- Registro Administradores -->

    <string name="RegistroTXT">Registro de administradores</string>
    <string name="Correo">Correo Electronico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombres">Nombres Completos</string>
    <string name="Apellidos">Apellidos Completos</string>
    <string name="Edad">Edad</string>
    <string name="FechaRegistro">Fecha de Registro</string>
    <string name="Registrar">Registrar</string>

    <!-- Logic de adminisitradores-->
    <string name="LoginTXT">Login de administradores</string>
    <string name="Ingresar">Ingresar</string>


    <!-- Categorias -->
    <string name="Eligeuncategoriatxt">Elige Categoria</string>
    <!-- Peliculas -->
    <string name="Manga">Manga</string>
    <!-- Series -->
    <string name="Anime">Anime</string>
    <!-- Musica -->
    <string name="dibujos">Ilustracion</string>
    <!-- VideoGames -->
    <string name="Comics">Comics</string>

    <!-- Menu Agregar - login Admin -->
    <string name="Agregar">Agregar</string>
    <string name="Vista">Vista</string>

    <!-- Agregar Manga -->
    <string name="NombreTXTMangas">Nombre de la Imagen</string>
    <string name="NombredePeliculas">Escriba el nombre</string>
    <string name="VistaMangas">0</string>
    <string name="PublicarManga">Publicar</string>

    <!-- Item Manga -->
    <string name="NombreImagenManga"> -- </string>
    <string name="VisManga"> -- </string>


    <!-- Agregar Animes -->
    <string name="NombreTXTAnime">Nombre de la Imagen</string>
    <string name="NombredeAnime">Escriba el nombre</string>
    <string name="VistaAnime">0</string>
    <string name="PublicarAnime">Publicar</string>

    <!-- Item Anime -->
    <string name="NombreImagenAnime"> -- </string>
    <string name="VisAnime"> -- </string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>