<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FragmentosAdministrador.InicioAdmin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:text="@string/Eligeuncategoriatxt"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <!-- Fila 1 -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_weight="2">

            <!--Peliculas -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/mohan"/>

                <Button
                    android:id="@+id/Manga"
                    android:text="@string/Manga"
                    android:background="@drawable/btn_personalizado"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--Series -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/categoria_1"/>

                <Button
                    android:id="@+id/Anime"
                    android:text="@string/Anime"
                    android:background="@drawable/btn_personalizado"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>




        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Fila 2 -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_weight="2">

            <!--MuISCA-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/categoria_2"/>


                <Button
                    android:id="@+id/Dibujos"
                    android:text="@string/dibujos"
                    android:background="@drawable/btn_personalizado"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--vIDEOGAMES-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/categoria_4"/>

                <Button
                    android:id="@+id/Comics"
                    android:text="@string/Comics"
                    android:background="@drawable/btn_personalizado"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>





        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>